# groots

./: .gitignore  .gitmodules  Makefile  README.md  altstore.json  docker-compose.dev.yml  docker-compose.yml  groots.code-workspace
.config/: .env.example  .gitignore
backend/: Dockerfile
backend/src/: pyproject.toml
backend/src/groots/: config.py
backend/src/groots/adapters/impl/: audio_fingerprinter.py  cd_verifier.py  discogs_client.py  ipfs_client.py  metadata_extractor.py
backend/src/groots/adapters/repositories/: album_repo.py  fingerprint_repo.py  playlist_repo.py  repository.py  role_repo.py  track_repo.py  user_repo.py
backend/src/groots/domain/: commands.py  errors.py  events.py
backend/src/groots/domain/model/: album.py  base.py  fingerprint.py  playlist.py  role.py  track.py  user.py
backend/src/groots/entrypoints/api/: auth.py  container.py  main.py  views.py
backend/src/groots/entrypoints/api/routes/: __init__.py  admin.py  albums.py  auth.py  discogs.py  genres.py  ipfs.py  library.py  playlists.py  users.py
backend/src/groots/entrypoints/api/routes/schemas/: album.py  discogs.py  playlist.py  track.py  user.py
backend/src/groots/service_layer/: errors.py  messagebus.py  unit_of_work.py
backend/src/groots/service_layer/handlers/: admin_handler.py  album_handler.py  library_handler.py  playlist_handler.py  user_handler.py
backend/src/migration/: migrate.py  migration.py.mako
backend/src/migration/versions/: 20260417_track_fingerprint_id.py  20260517_track_album_user_refactor.py
db/: Dockerfile
groots_app/: pubspec.yaml
(+110 files in other folders)
