[tool.poetry]
name = "groots"
version = "0.1.0"
description = "Decentralized personal music streaming platform"
authors = []
packages = [{include = "groots"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
motor = "^3.5.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0"
python-multipart = "^0.0.9"
dependency-injector = "^4.41.0"
httpx = "^0.27.0"
pyacoustid = "^1.3.0"
chromaprint = "^0.5"
mutagen = "^1.47.0"
pymongo = "^4.7.0"
mako = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
ruff = "^0.4.0"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = false
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
remove_redundant_aliases = true
force_alphabetical_sort_within_sections = true